--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
           </button> -->
         </div>
 
+      
+      </div>
+
       <div class="recipe">
         <div class="message">
           <div>
